versioned_docs/version-1.5/dankgreeter/nixos.mdx
---
title: NixOS Installation
description: Install and configure DankGreeter on NixOS using native nixpkgs
sidebar_position: 3
---

import Hero from '@site/src/components/Hero';

<Hero
  asciiArt={`██████╗  █████╗ ███╗   ██╗██╗  ██╗ ██████╗ ██████╗ ███████╗███████╗████████╗
██╔══██╗██╔══██╗████╗  ██║██║ ██╔╝██╔════╝ ██╔══██╗██╔════╝██╔════╝╚══██╔══╝
██║  ██║███████║██╔██╗ ██║█████╔╝ ██║  ███╗██████╔╝█████╗  █████╗     ██║
██║  ██║██╔══██║██║╚██╗██║██╔═██╗ ██║   ██║██╔══██╗██╔══╝  ██╔══╝     ██║
██████╔╝██║  ██║██║ ╚████║██║  ██╗╚██████╔╝██║  ██║███████╗███████╗   ██║
╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═══╝╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚══════╝╚══════╝   ╚═╝
                                                                            `}
  hideTitle={true}
/>

DankGreeter can be installed on NixOS using the native nixpkgs module. This is the recommended installation method for users on NixOS 26.05+.

## Installation

### 1. Enable DankGreeter

Enable and configure the greeter in your NixOS configuration:

```nix
services.displayManager.dms-greeter = {
  enable = true;
  compositor.name = "niri";  # Or "hyprland" or "sway"
};
```

:::warning

Compositors must be installed via NixOS configuration to appear in DankGreeter, not via home-manager.

:::

## Configuration Options

```nix
services.displayManager.dms-greeter = {
  compositor = {
    name = "niri"; # Required. Can be also "hyprland" or "sway"
    customConfig = ''
      # Optional custom compositor configuration
    '';
  };

  # Sync your user's DankMaterialShell theme with the greeter. You'll probably want this
  configHome = "/home/yourusername";

  # Custom config files for non-standard config locations
  configFiles = [
    "/home/yourusername/.config/DankMaterialShell/settings.json"
  ];

  # Save the logs to a file
  logs = {
    save = true; 
    path = "/tmp/dms-greeter.log";
  };

  # Custom Quickshell Package    
  quickshell.package = pkgs.quickshell;
};
```

### Using Flake Package with NixOS Module

You can use the package from the DankMaterialShell flake while still using the native NixOS module. This allows you to get quicker updates while keeping the module configuration:

First, add the flake input to your `flake.nix`:

```nix
{
  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixos-26.05";
    
    dms = {
      url = "github:AvengeMedia/DankMaterialShell/stable";
      inputs.nixpkgs.follows = "nixpkgs";
    };
  };
}
```

:::tip[Using unstable Version]
If you want to use the unstable (-git) version from the master branch for quicker updates, remove `/stable` from the URL:
```nix
dms.url = "github:AvengeMedia/DankMaterialShell";
```
However, be aware that the unstable version may not work properly and could contain breaking changes. The documentation may not reflect the latest changes in the unstable version.
:::

Then use the flake package with the native module:

```nix
services.displayManager.dms-greeter = {
  enable = true;
  compositor.name = "niri";
  package = inputs.dms.packages.${pkgs.stdenv.hostPlatform.system}.default;
};
```

:::warning

When using the flake package with the native nixpkgs module, some dependencies may not be automatically enabled by default, and certain configurations might be missing. You may need to manually install optional dependencies or adjust settings to match your needs.

:::

## Auto-login

DankGreeter can skip the login screen and launch a session automatically on
boot using the standard NixOS display-manager options:

```nix
services.displayManager = {
  autoLogin = {
    enable = true;
    user = "yourusername";
  };

  # Required for auto-login: identifies which session to launch.
  # Use the .desktop basename without the extension (e.g. "niri", "hyprland").
  defaultSession = "niri";
};
```

`defaultSession` (or at least one entry in
`services.displayManager.sessionPackages`) is required — the module needs to
know which session to start, and will fail to build otherwise.

## Authentication (PAM)

On NixOS, `/etc/pam.d/greetd` is generated by the module system, so DMS's automatic PAM management does not apply. Your system PAM policy is always authoritative for the greeter. This is equivalent to the **Use system PAM authentication** mode in Settings → Greeter.

To add fingerprint or security-key authentication to the greeter, extend the greetd service in your NixOS configuration:

```nix
security.pam.services.greetd = {
  fprintAuth = true;  # Fingerprint via pam_fprintd
  u2fAuth = true;     # Security key via pam_u2f (configure security.pam.u2f options)
};
```

DankGreeter detects the modules present in the resolved greetd stack and adapts its prompts automatically.

## Rebuilding

After making configuration changes, don't forget to rebuild your configuration:

```bash
sudo nixos-rebuild switch
```
